# PdfSuportBG

./: AGENTS.md  README.md  SETUP.md  opencode.json  output_debug.txt  pyproject.toml  requirements.txt
.opencode/: opencode.json
.opencode/agents/: gui-developer.json  gui-developer.md  orchestrator.json  orchestrator.md  pdf-engineer.json  pdf-engineer.md
.opencode/agents/docs-writer/: AGENT.md
.opencode/agents/gui-developer/: AGENT.md
.opencode/agents/orchestrator/: AGENT.md
.opencode/agents/pdf-engineer/: AGENT.md
.opencode/commands/: verify-skills.md
.opencode/scripts/: verify_skills.py
.opencode/skills/: skill-commit.json  skill-design.json  skill-doc.json  skill-generate.json  skill-sinc.json
.opencode/skills/commit/: SKILL.md
.opencode/skills/design/: SKILL.md
.opencode/skills/doc/: SKILL.md
.opencode/skills/generate/: SKILL.md
.opencode/skills/sinc/: SKILL.md
.opencode/skills/skill-commit/: SKILL.md
.opencode/skills/skill-corporate-cli/: SKILL.md
.opencode/skills/skill-corporate-cli-v2/: SKILL.md
.opencode/skills/skill-design/: SKILL.md
.opencode/skills/skill-doc/: SKILL.md
.opencode/skills/skill-error-prevention/: SKILL.md
src/: main.py  main_debug.py  run_debug.py  test_simple.py
src/config/: __init__.py  constants.py
src/core/: pdf_repair.py
src/gui/: main_window.py  splash_screen.py
src/legacy/: xebec_pdf_fixer.py
src/orchestration/: __init__.py  messages.py  orchestrator.py
src/skills/: qt6_window_engineering.py
src/utils/: app_settings.py  font_manager.py  helpers.py  logger.py  recent_files.py
(+60 files in other folders)
